nginx-istio/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: istio-system
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    nginx.ingress.kubernetes.io/upstream-vhost: "mj-nginx-istio.eastus.cloudapp.azure.com"
spec:
  ingressClassName: nginx
  rules:
    - host: "mj-nginx-istio.eastus.cloudapp.azure.com"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
            path: "/echo_"
